--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.4",
+    "@chakra-ui/react": "^1.2.1",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
     "firebase": "^8.2.5",
+    "framer-motion": "^3.3.0-beta.22",
     "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1"
