--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^3.3.0-beta.22",
     "next": "10.0.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-icons": "^4.1.0"
   }
 }
