--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
     "@chakra-ui/react": "^1.2.1",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
+    "date-fns": "^2.16.1",
     "firebase": "^8.2.5",
+    "firebase-admin": "^9.4.2",
     "framer-motion": "^3.3.0-beta.22",
+    "js-cookie": "^2.2.1",
     "next": "10.0.5",
+    "now": "^21.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-icons": "^4.1.0"
+    "react-hook-form": "^6.15.1",
+    "react-icons": "^4.1.0",
+    "swr": "^0.4.1"
   }
 }
